y.output
Terminals which are not used

   tESPACE
   tRETURN


State 7 conflicts: 6 shift/reduce
State 16 conflicts: 7 shift/reduce
State 27 conflicts: 6 shift/reduce, 7 reduce/reduce
State 47 conflicts: 1 shift/reduce
State 64 conflicts: 1 shift/reduce


Grammar

    0 $accept: start $end

    1 start: tINT tMAIN tPARENTHESE_OUVRANTE tPARENTHESE_FERMANTE Body

    2 Body: tACCOLADE_OUVRANTE Phrase tACCOLADE_FERMANTE

    3 EntierOuVar: tENTIER
    4            | tVAR_NAME

    5 Var: tVAR_NAME

    6 Phrase: Phrase Phrase
    7       | tINT Def_VAR_INT tPOINT_VIRGULE
    8       | tCONST tINT Def_VAR_CONST_INT tPOINT_VIRGULE
    9       | If_else
   10       | While
   11       | Var tEGALE Calcul tPOINT_VIRGULE
   12       | tPRINTF_VARIABLE tPARENTHESE_OUVRANTE Var tPARENTHESE_FERMANTE tPOINT_VIRGULE
   13       | /* empty */

   14 Calcul: tPARENTHESE_OUVRANTE Calcul tPARENTHESE_FERMANTE
   15       | Calcul tPLUS Calcul
   16       | Calcul tMOINS Calcul
   17       | Calcul tFOIS Calcul
   18       | Calcul tDIVISER Calcul
   19       | EntierOuVar

   20 Entier: tENTIER

   21 Def_VAR_INT: Var
   22            | Var tEGALE Entier
   23            | Def_VAR_INT tVIRGULE Def_VAR_INT

   24 Def_VAR_CONST_INT: Var
   25                  | Var tEGALE Entier
   26                  | Def_VAR_CONST_INT tVIRGULE Def_VAR_CONST_INT

   27 Condition: Calcul tINF Calcul
   28          | Calcul tSUP Calcul
   29          | Calcul tCMP Calcul
   30          | Calcul tINFEGALE Calcul
   31          | Calcul tSUPEGALE Calcul
   32          | Calcul tNOTEGALE Calcul

   33 If_else: tIF tPARENTHESE_OUVRANTE Condition tPARENTHESE_FERMANTE Body

   34 @1: /* empty */

   35 If_else: tIF tPARENTHESE_OUVRANTE Condition tPARENTHESE_FERMANTE Body tELSE @1 Body

   36 @2: /* empty */

   37 While: tWHILE @2 tPARENTHESE_OUVRANTE Condition tPARENTHESE_FERMANTE Body


Terminals, with rules where they appear

$end (0) 0
error (256)
tENTIER (258) 3 20
tVAR_NAME (259) 4 5
tMAIN (260) 1
tPARENTHESE_OUVRANTE (261) 1 12 14 33 35 37
tPARENTHESE_FERMANTE (262) 1 12 14 33 35 37
tACCOLADE_OUVRANTE (263) 2
tACCOLADE_FERMANTE (264) 2
tCONST (265) 8
tINT (266) 1 7 8
tPLUS (267) 15
tMOINS (268) 16
tFOIS (269) 17
tDIVISER (270) 18
tEGALE (271) 11 22 25
tESPACE (272)
tVIRGULE (273) 23 26
tPOINT_VIRGULE (274) 7 8 11 12
tPRINTF_VARIABLE (275) 12
tIF (276) 33 35
tELSE (277) 35
tWHILE (278) 37
tRETURN (279)
tCMP (280) 29
tINF (281) 27
tSUP (282) 28
tINFEGALE (283) 30
tSUPEGALE (284) 31
tNOTEGALE (285) 32


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
start (32)
    on left: 1, on right: 0
Body (33)
    on left: 2, on right: 1 33 35 37
EntierOuVar (34)
    on left: 3 4, on right: 19
Var (35)
    on left: 5, on right: 11 12 21 22 24 25
Phrase (36)
    on left: 6 7 8 9 10 11 12 13, on right: 2 6
Calcul (37)
    on left: 14 15 16 17 18 19, on right: 11 14 15 16 17 18 27 28 29
    30 31 32
Entier (38)
    on left: 20, on right: 22 25
Def_VAR_INT (39)
    on left: 21 22 23, on right: 7 23
Def_VAR_CONST_INT (40)
    on left: 24 25 26, on right: 8 26
Condition (41)
    on left: 27 28 29 30 31 32, on right: 33 35 37
If_else (42)
    on left: 33 35, on right: 9
@1 (43)
    on left: 34, on right: 35
While (44)
    on left: 37, on right: 10
@2 (45)
    on left: 36, on right: 37


state 0

    0 $accept: . start $end

    tINT  shift, and go to state 1

    start  go to state 2


state 1

    1 start: tINT . tMAIN tPARENTHESE_OUVRANTE tPARENTHESE_FERMANTE Body

    tMAIN  shift, and go to state 3


state 2

    0 $accept: start . $end

    $end  shift, and go to state 4


state 3

    1 start: tINT tMAIN . tPARENTHESE_OUVRANTE tPARENTHESE_FERMANTE Body

    tPARENTHESE_OUVRANTE  shift, and go to state 5


state 4

    0 $accept: start $end .

    $default  accept


state 5

    1 start: tINT tMAIN tPARENTHESE_OUVRANTE . tPARENTHESE_FERMANTE Body

    tPARENTHESE_FERMANTE  shift, and go to state 6


state 6

    1 start: tINT tMAIN tPARENTHESE_OUVRANTE tPARENTHESE_FERMANTE . Body

    tACCOLADE_OUVRANTE  shift, and go to state 7

    Body  go to state 8


state 7

    2 Body: tACCOLADE_OUVRANTE . Phrase tACCOLADE_FERMANTE

    tVAR_NAME         shift, and go to state 9
    tCONST            shift, and go to state 10
    tINT              shift, and go to state 11
    tPRINTF_VARIABLE  shift, and go to state 12
    tIF               shift, and go to state 13
    tWHILE            shift, and go to state 14

    tVAR_NAME         [reduce using rule 13 (Phrase)]
    tCONST            [reduce using rule 13 (Phrase)]
    tINT              [reduce using rule 13 (Phrase)]
    tPRINTF_VARIABLE  [reduce using rule 13 (Phrase)]
    tIF               [reduce using rule 13 (Phrase)]
    tWHILE            [reduce using rule 13 (Phrase)]
    $default          reduce using rule 13 (Phrase)

    Var      go to state 15
    Phrase   go to state 16
    If_else  go to state 17
    While    go to state 18


state 8

    1 start: tINT tMAIN tPARENTHESE_OUVRANTE tPARENTHESE_FERMANTE Body .

    $default  reduce using rule 1 (start)


state 9

    5 Var: tVAR_NAME .

    $default  reduce using rule 5 (Var)


state 10

    8 Phrase: tCONST . tINT Def_VAR_CONST_INT tPOINT_VIRGULE

    tINT  shift, and go to state 19


state 11

    7 Phrase: tINT . Def_VAR_INT tPOINT_VIRGULE

    tVAR_NAME  shift, and go to state 9

    Var          go to state 20
    Def_VAR_INT  go to state 21


state 12

   12 Phrase: tPRINTF_VARIABLE . tPARENTHESE_OUVRANTE Var tPARENTHESE_FERMANTE tPOINT_VIRGULE

    tPARENTHESE_OUVRANTE  shift, and go to state 22


state 13

   33 If_else: tIF . tPARENTHESE_OUVRANTE Condition tPARENTHESE_FERMANTE Body
   35        | tIF . tPARENTHESE_OUVRANTE Condition tPARENTHESE_FERMANTE Body tELSE @1 Body

    tPARENTHESE_OUVRANTE  shift, and go to state 23


state 14

   37 While: tWHILE . @2 tPARENTHESE_OUVRANTE Condition tPARENTHESE_FERMANTE Body

    $default  reduce using rule 36 (@2)

    @2  go to state 24


state 15

   11 Phrase: Var . tEGALE Calcul tPOINT_VIRGULE

    tEGALE  shift, and go to state 25


state 16

    2 Body: tACCOLADE_OUVRANTE Phrase . tACCOLADE_FERMANTE
    6 Phrase: Phrase . Phrase

    tVAR_NAME           shift, and go to state 9
    tACCOLADE_FERMANTE  shift, and go to state 26
    tCONST              shift, and go to state 10
    tINT                shift, and go to state 11
    tPRINTF_VARIABLE    shift, and go to state 12
    tIF                 shift, and go to state 13
    tWHILE              shift, and go to state 14

    tVAR_NAME           [reduce using rule 13 (Phrase)]
    tACCOLADE_FERMANTE  [reduce using rule 13 (Phrase)]
    tCONST              [reduce using rule 13 (Phrase)]
    tINT                [reduce using rule 13 (Phrase)]
    tPRINTF_VARIABLE    [reduce using rule 13 (Phrase)]
    tIF                 [reduce using rule 13 (Phrase)]
    tWHILE              [reduce using rule 13 (Phrase)]

    Var      go to state 15
    Phrase   go to state 27
    If_else  go to state 17
    While    go to state 18


state 17

    9 Phrase: If_else .

    $default  reduce using rule 9 (Phrase)


state 18

   10 Phrase: While .

    $default  reduce using rule 10 (Phrase)


state 19

    8 Phrase: tCONST tINT . Def_VAR_CONST_INT tPOINT_VIRGULE

    tVAR_NAME  shift, and go to state 9

    Var                go to state 28
    Def_VAR_CONST_INT  go to state 29


state 20

   21 Def_VAR_INT: Var .
   22            | Var . tEGALE Entier

    tEGALE  shift, and go to state 30

    $default  reduce using rule 21 (Def_VAR_INT)


state 21

    7 Phrase: tINT Def_VAR_INT . tPOINT_VIRGULE
   23 Def_VAR_INT: Def_VAR_INT . tVIRGULE Def_VAR_INT

    tVIRGULE        shift, and go to state 31
    tPOINT_VIRGULE  shift, and go to state 32


state 22

   12 Phrase: tPRINTF_VARIABLE tPARENTHESE_OUVRANTE . Var tPARENTHESE_FERMANTE tPOINT_VIRGULE

    tVAR_NAME  shift, and go to state 9

    Var  go to state 33


state 23

   33 If_else: tIF tPARENTHESE_OUVRANTE . Condition tPARENTHESE_FERMANTE Body
   35        | tIF tPARENTHESE_OUVRANTE . Condition tPARENTHESE_FERMANTE Body tELSE @1 Body

    tENTIER               shift, and go to state 34
    tVAR_NAME             shift, and go to state 35
    tPARENTHESE_OUVRANTE  shift, and go to state 36

    EntierOuVar  go to state 37
    Calcul       go to state 38
    Condition    go to state 39


state 24

   37 While: tWHILE @2 . tPARENTHESE_OUVRANTE Condition tPARENTHESE_FERMANTE Body

    tPARENTHESE_OUVRANTE  shift, and go to state 40


state 25

   11 Phrase: Var tEGALE . Calcul tPOINT_VIRGULE

    tENTIER               shift, and go to state 34
    tVAR_NAME             shift, and go to state 35
    tPARENTHESE_OUVRANTE  shift, and go to state 36

    EntierOuVar  go to state 37
    Calcul       go to state 41


state 26

    2 Body: tACCOLADE_OUVRANTE Phrase tACCOLADE_FERMANTE .

    $default  reduce using rule 2 (Body)


state 27

    6 Phrase: Phrase . Phrase
    6       | Phrase Phrase .

    tVAR_NAME         shift, and go to state 9
    tCONST            shift, and go to state 10
    tINT              shift, and go to state 11
    tPRINTF_VARIABLE  shift, and go to state 12
    tIF               shift, and go to state 13
    tWHILE            shift, and go to state 14

    tVAR_NAME           [reduce using rule 6 (Phrase)]
    tVAR_NAME           [reduce using rule 13 (Phrase)]
    tACCOLADE_FERMANTE  reduce using rule 6 (Phrase)
    tACCOLADE_FERMANTE  [reduce using rule 13 (Phrase)]
    tCONST              [reduce using rule 6 (Phrase)]
    tCONST              [reduce using rule 13 (Phrase)]
    tINT                [reduce using rule 6 (Phrase)]
    tINT                [reduce using rule 13 (Phrase)]
    tPRINTF_VARIABLE    [reduce using rule 6 (Phrase)]
    tPRINTF_VARIABLE    [reduce using rule 13 (Phrase)]
    tIF                 [reduce using rule 6 (Phrase)]
    tIF                 [reduce using rule 13 (Phrase)]
    tWHILE              [reduce using rule 6 (Phrase)]
    tWHILE              [reduce using rule 13 (Phrase)]
    $default            reduce using rule 6 (Phrase)

    Var      go to state 15
    Phrase   go to state 27
    If_else  go to state 17
    While    go to state 18


state 28

   24 Def_VAR_CONST_INT: Var .
   25                  | Var . tEGALE Entier

    tEGALE  shift, and go to state 42

    $default  reduce using rule 24 (Def_VAR_CONST_INT)


state 29

    8 Phrase: tCONST tINT Def_VAR_CONST_INT . tPOINT_VIRGULE
   26 Def_VAR_CONST_INT: Def_VAR_CONST_INT . tVIRGULE Def_VAR_CONST_INT

    tVIRGULE        shift, and go to state 43
    tPOINT_VIRGULE  shift, and go to state 44


state 30

   22 Def_VAR_INT: Var tEGALE . Entier

    tENTIER  shift, and go to state 45

    Entier  go to state 46


state 31

   23 Def_VAR_INT: Def_VAR_INT tVIRGULE . Def_VAR_INT

    tVAR_NAME  shift, and go to state 9

    Var          go to state 20
    Def_VAR_INT  go to state 47


state 32

    7 Phrase: tINT Def_VAR_INT tPOINT_VIRGULE .

    $default  reduce using rule 7 (Phrase)


state 33

   12 Phrase: tPRINTF_VARIABLE tPARENTHESE_OUVRANTE Var . tPARENTHESE_FERMANTE tPOINT_VIRGULE

    tPARENTHESE_FERMANTE  shift, and go to state 48


state 34

    3 EntierOuVar: tENTIER .

    $default  reduce using rule 3 (EntierOuVar)


state 35

    4 EntierOuVar: tVAR_NAME .

    $default  reduce using rule 4 (EntierOuVar)


state 36

   14 Calcul: tPARENTHESE_OUVRANTE . Calcul tPARENTHESE_FERMANTE

    tENTIER               shift, and go to state 34
    tVAR_NAME             shift, and go to state 35
    tPARENTHESE_OUVRANTE  shift, and go to state 36

    EntierOuVar  go to state 37
    Calcul       go to state 49


state 37

   19 Calcul: EntierOuVar .

    $default  reduce using rule 19 (Calcul)


state 38

   15 Calcul: Calcul . tPLUS Calcul
   16       | Calcul . tMOINS Calcul
   17       | Calcul . tFOIS Calcul
   18       | Calcul . tDIVISER Calcul
   27 Condition: Calcul . tINF Calcul
   28          | Calcul . tSUP Calcul
   29          | Calcul . tCMP Calcul
   30          | Calcul . tINFEGALE Calcul
   31          | Calcul . tSUPEGALE Calcul
   32          | Calcul . tNOTEGALE Calcul

    tPLUS      shift, and go to state 50
    tMOINS     shift, and go to state 51
    tFOIS      shift, and go to state 52
    tDIVISER   shift, and go to state 53
    tCMP       shift, and go to state 54
    tINF       shift, and go to state 55
    tSUP       shift, and go to state 56
    tINFEGALE  shift, and go to state 57
    tSUPEGALE  shift, and go to state 58
    tNOTEGALE  shift, and go to state 59


state 39

   33 If_else: tIF tPARENTHESE_OUVRANTE Condition . tPARENTHESE_FERMANTE Body
   35        | tIF tPARENTHESE_OUVRANTE Condition . tPARENTHESE_FERMANTE Body tELSE @1 Body

    tPARENTHESE_FERMANTE  shift, and go to state 60


state 40

   37 While: tWHILE @2 tPARENTHESE_OUVRANTE . Condition tPARENTHESE_FERMANTE Body

    tENTIER               shift, and go to state 34
    tVAR_NAME             shift, and go to state 35
    tPARENTHESE_OUVRANTE  shift, and go to state 36

    EntierOuVar  go to state 37
    Calcul       go to state 38
    Condition    go to state 61


state 41

   11 Phrase: Var tEGALE Calcul . tPOINT_VIRGULE
   15 Calcul: Calcul . tPLUS Calcul
   16       | Calcul . tMOINS Calcul
   17       | Calcul . tFOIS Calcul
   18       | Calcul . tDIVISER Calcul

    tPLUS           shift, and go to state 50
    tMOINS          shift, and go to state 51
    tFOIS           shift, and go to state 52
    tDIVISER        shift, and go to state 53
    tPOINT_VIRGULE  shift, and go to state 62


state 42

   25 Def_VAR_CONST_INT: Var tEGALE . Entier

    tENTIER  shift, and go to state 45

    Entier  go to state 63


state 43

   26 Def_VAR_CONST_INT: Def_VAR_CONST_INT tVIRGULE . Def_VAR_CONST_INT

    tVAR_NAME  shift, and go to state 9

    Var                go to state 28
    Def_VAR_CONST_INT  go to state 64


state 44

    8 Phrase: tCONST tINT Def_VAR_CONST_INT tPOINT_VIRGULE .

    $default  reduce using rule 8 (Phrase)


state 45

   20 Entier: tENTIER .

    $default  reduce using rule 20 (Entier)


state 46

   22 Def_VAR_INT: Var tEGALE Entier .

    $default  reduce using rule 22 (Def_VAR_INT)


state 47

   23 Def_VAR_INT: Def_VAR_INT . tVIRGULE Def_VAR_INT
   23            | Def_VAR_INT tVIRGULE Def_VAR_INT .

    tVIRGULE  shift, and go to state 31

    tVIRGULE  [reduce using rule 23 (Def_VAR_INT)]
    $default  reduce using rule 23 (Def_VAR_INT)


state 48

   12 Phrase: tPRINTF_VARIABLE tPARENTHESE_OUVRANTE Var tPARENTHESE_FERMANTE . tPOINT_VIRGULE

    tPOINT_VIRGULE  shift, and go to state 65


state 49

   14 Calcul: tPARENTHESE_OUVRANTE Calcul . tPARENTHESE_FERMANTE
   15       | Calcul . tPLUS Calcul
   16       | Calcul . tMOINS Calcul
   17       | Calcul . tFOIS Calcul
   18       | Calcul . tDIVISER Calcul

    tPARENTHESE_FERMANTE  shift, and go to state 66
    tPLUS                 shift, and go to state 50
    tMOINS                shift, and go to state 51
    tFOIS                 shift, and go to state 52
    tDIVISER              shift, and go to state 53


state 50

   15 Calcul: Calcul tPLUS . Calcul

    tENTIER               shift, and go to state 34
    tVAR_NAME             shift, and go to state 35
    tPARENTHESE_OUVRANTE  shift, and go to state 36

    EntierOuVar  go to state 37
    Calcul       go to state 67


state 51

   16 Calcul: Calcul tMOINS . Calcul

    tENTIER               shift, and go to state 34
    tVAR_NAME             shift, and go to state 35
    tPARENTHESE_OUVRANTE  shift, and go to state 36

    EntierOuVar  go to state 37
    Calcul       go to state 68


state 52

   17 Calcul: Calcul tFOIS . Calcul

    tENTIER               shift, and go to state 34
    tVAR_NAME             shift, and go to state 35
    tPARENTHESE_OUVRANTE  shift, and go to state 36

    EntierOuVar  go to state 37
    Calcul       go to state 69


state 53

   18 Calcul: Calcul tDIVISER . Calcul

    tENTIER               shift, and go to state 34
    tVAR_NAME             shift, and go to state 35
    tPARENTHESE_OUVRANTE  shift, and go to state 36

    EntierOuVar  go to state 37
    Calcul       go to state 70


state 54

   29 Condition: Calcul tCMP . Calcul

    tENTIER               shift, and go to state 34
    tVAR_NAME             shift, and go to state 35
    tPARENTHESE_OUVRANTE  shift, and go to state 36

    EntierOuVar  go to state 37
    Calcul       go to state 71


state 55

   27 Condition: Calcul tINF . Calcul

    tENTIER               shift, and go to state 34
    tVAR_NAME             shift, and go to state 35
    tPARENTHESE_OUVRANTE  shift, and go to state 36

    EntierOuVar  go to state 37
    Calcul       go to state 72


state 56

   28 Condition: Calcul tSUP . Calcul

    tENTIER               shift, and go to state 34
    tVAR_NAME             shift, and go to state 35
    tPARENTHESE_OUVRANTE  shift, and go to state 36

    EntierOuVar  go to state 37
    Calcul       go to state 73


state 57

   30 Condition: Calcul tINFEGALE . Calcul

    tENTIER               shift, and go to state 34
    tVAR_NAME             shift, and go to state 35
    tPARENTHESE_OUVRANTE  shift, and go to state 36

    EntierOuVar  go to state 37
    Calcul       go to state 74


state 58

   31 Condition: Calcul tSUPEGALE . Calcul

    tENTIER               shift, and go to state 34
    tVAR_NAME             shift, and go to state 35
    tPARENTHESE_OUVRANTE  shift, and go to state 36

    EntierOuVar  go to state 37
    Calcul       go to state 75


state 59

   32 Condition: Calcul tNOTEGALE . Calcul

    tENTIER               shift, and go to state 34
    tVAR_NAME             shift, and go to state 35
    tPARENTHESE_OUVRANTE  shift, and go to state 36

    EntierOuVar  go to state 37
    Calcul       go to state 76


state 60

   33 If_else: tIF tPARENTHESE_OUVRANTE Condition tPARENTHESE_FERMANTE . Body
   35        | tIF tPARENTHESE_OUVRANTE Condition tPARENTHESE_FERMANTE . Body tELSE @1 Body

    tACCOLADE_OUVRANTE  shift, and go to state 7

    Body  go to state 77


state 61

   37 While: tWHILE @2 tPARENTHESE_OUVRANTE Condition . tPARENTHESE_FERMANTE Body

    tPARENTHESE_FERMANTE  shift, and go to state 78


state 62

   11 Phrase: Var tEGALE Calcul tPOINT_VIRGULE .

    $default  reduce using rule 11 (Phrase)


state 63

   25 Def_VAR_CONST_INT: Var tEGALE Entier .

    $default  reduce using rule 25 (Def_VAR_CONST_INT)


state 64

   26 Def_VAR_CONST_INT: Def_VAR_CONST_INT . tVIRGULE Def_VAR_CONST_INT
   26                  | Def_VAR_CONST_INT tVIRGULE Def_VAR_CONST_INT .

    tVIRGULE  shift, and go to state 43

    tVIRGULE  [reduce using rule 26 (Def_VAR_CONST_INT)]
    $default  reduce using rule 26 (Def_VAR_CONST_INT)


state 65

   12 Phrase: tPRINTF_VARIABLE tPARENTHESE_OUVRANTE Var tPARENTHESE_FERMANTE tPOINT_VIRGULE .

    $default  reduce using rule 12 (Phrase)


state 66

   14 Calcul: tPARENTHESE_OUVRANTE Calcul tPARENTHESE_FERMANTE .

    $default  reduce using rule 14 (Calcul)


state 67

   15 Calcul: Calcul . tPLUS Calcul
   15       | Calcul tPLUS Calcul .
   16       | Calcul . tMOINS Calcul
   17       | Calcul . tFOIS Calcul
   18       | Calcul . tDIVISER Calcul

    tFOIS     shift, and go to state 52
    tDIVISER  shift, and go to state 53

    $default  reduce using rule 15 (Calcul)


state 68

   15 Calcul: Calcul . tPLUS Calcul
   16       | Calcul . tMOINS Calcul
   16       | Calcul tMOINS Calcul .
   17       | Calcul . tFOIS Calcul
   18       | Calcul . tDIVISER Calcul

    tFOIS     shift, and go to state 52
    tDIVISER  shift, and go to state 53

    $default  reduce using rule 16 (Calcul)


state 69

   15 Calcul: Calcul . tPLUS Calcul
   16       | Calcul . tMOINS Calcul
   17       | Calcul . tFOIS Calcul
   17       | Calcul tFOIS Calcul .
   18       | Calcul . tDIVISER Calcul

    $default  reduce using rule 17 (Calcul)


state 70

   15 Calcul: Calcul . tPLUS Calcul
   16       | Calcul . tMOINS Calcul
   17       | Calcul . tFOIS Calcul
   18       | Calcul . tDIVISER Calcul
   18       | Calcul tDIVISER Calcul .

    $default  reduce using rule 18 (Calcul)


state 71

   15 Calcul: Calcul . tPLUS Calcul
   16       | Calcul . tMOINS Calcul
   17       | Calcul . tFOIS Calcul
   18       | Calcul . tDIVISER Calcul
   29 Condition: Calcul tCMP Calcul .

    tPLUS     shift, and go to state 50
    tMOINS    shift, and go to state 51
    tFOIS     shift, and go to state 52
    tDIVISER  shift, and go to state 53

    $default  reduce using rule 29 (Condition)


state 72

   15 Calcul: Calcul . tPLUS Calcul
   16       | Calcul . tMOINS Calcul
   17       | Calcul . tFOIS Calcul
   18       | Calcul . tDIVISER Calcul
   27 Condition: Calcul tINF Calcul .

    tPLUS     shift, and go to state 50
    tMOINS    shift, and go to state 51
    tFOIS     shift, and go to state 52
    tDIVISER  shift, and go to state 53

    $default  reduce using rule 27 (Condition)


state 73
